--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn run build",
-    "build": "webpack -d&copy src\\index.html dist\\index.html&webpack-dev-server --content-base src\\ --inline --hot",
+    "build": "webpack -d&copy src\\index.html dist\\index.html&webpack-dev-server --content-base src\\ --inline --hot --history-api-fallback",
     "build:prod": "webpack -p&copy src\\index.html dist\\index.html"
   },
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
