--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.8.2",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
